@@ -1122,6 +1122,32 @@ void GLEngine::translate( double x, double y )
    glTranslated( x, y, 0 );
 }
 
+void draw_interlace_stencil( const mrv::Recti& d,
+                             int Y = 0 )
+{
+    int X = d.x();
+    unsigned W = d.w();
+    unsigned H = d.h();
+    glClear( GL_STENCIL_BUFFER_BIT );
+    glEnable( GL_STENCIL_TEST );
+    glStencilFunc( GL_ALWAYS, 0x1, 0xffffffff );
+    glStencilOp( GL_REPLACE, GL_REPLACE, GL_REPLACE );
+    glLineWidth( 1.0 );
+    glDisable( GL_BLEND );
+    glColorMask( GL_TRUE, GL_TRUE, GL_TRUE, GL_TRUE );
+    glDepthMask( GL_FALSE );
+    glColor4f( 1.0f, 0.0f, 0.0f, 1.0f );
+    glBegin( GL_LINES );
+    for ( ; Y < H; Y += 2 )
+    {
+        glVertex2i( X, -Y );
+        glVertex2i( W, -Y );
+    }
+    glEnd();
+    glStencilFunc(GL_EQUAL, 0x1, 0xffffffff);
+    glStencilOp(GL_KEEP, GL_KEEP, GL_KEEP);
+}
+
 void GLEngine::draw_images( ImageList& images )
 {
     CHECK_GL("draw_images");
@@ -1283,6 +1309,9 @@ void GLEngine::draw_images( ImageList& images )
       glTranslatef( float(daw.x() - img->eye_separation()),
                     float(-daw.y()), 0 );
 
+      if ( stereo & CMedia::kStereoInterlaced )
+          draw_interlace_stencil( dpw, (stereo != CMedia::kStereoInterlaced) );
+
 
       if ( _view->main()->uiPixelRatio->value() )
           glScaled( double(texWidth), double(texHeight) / _view->pixel_ratio(),
@@ -1313,8 +1342,9 @@ void GLEngine::draw_images( ImageList& images )
 
       if ( i+1 == e ) wipe_area();
 
-      if ( stereo != CMedia::kNoStereo && 
-           img->left() && img->right() )
+      // if ( stereo != CMedia::kNoStereo && 
+      //      img->left() && img->right() )
+      if ( img->left() && img->right() )
       {
          if ( stereo & CMedia::kStereoRight )
          {
@@ -1343,9 +1373,12 @@ void GLEngine::draw_images( ImageList& images )
 
          glPopMatrix();
 
+
          if ( ! ( stereo & CMedia::kStereoAnaglyph ) &&
-              ! ( stereo & CMedia::kStereoOpenGL ) )
+              ! ( stereo & CMedia::kStereoOpenGL ) &&
+              ! ( stereo & CMedia::kStereoInterlaced) )
              glTranslated( dpw.w(), 0, 0 );
+
 
          mrv::Recti dpw2 = img->display_window2(frame);
          mrv::Recti daw2 = img->data_window2(frame);
@@ -1381,6 +1414,7 @@ void GLEngine::draw_images( ImageList& images )
              }
          }
 
+
          if ( stereo & CMedia::kStereoRight )
          {
             pic = img->left();
@@ -1403,6 +1437,10 @@ void GLEngine::draw_images( ImageList& images )
       
 
          glTranslatef( float(daw2.x()), float(-daw2.y()), 0 );
+
+         if ( stereo & CMedia::kStereoInterlaced )
+             draw_interlace_stencil( dpw2, 
+                                     (stereo == CMedia::kStereoInterlaced) );
 
          if ( _view->main()->uiPixelRatio->value() )
              glScaled( double(texWidth), 
