@@ -1,7 +1,9 @@
 
+CMAKE_MINIMUM_REQUIRED( VERSION 2.8.1 FATAL_ERROR )
 
 ADD_SUBDIRECTORY( ctlparser )
 # ADD_SUBDIRECTORY( dvd )
-# ADD_SUBDIRECTORY( filereq )
 # ADD_SUBDIRECTORY( fullscreen )
 # ADD_SUBDIRECTORY( magick )
+ADD_SUBDIRECTORY( wrap )
+
