@@ -6,7 +6,8 @@ export     CTL_ROOT="F:/code/lib/Windows_64"
 export TINYXML2_ROOT="F:/code/lib/Windows_64"
 
 #export FFMPEG_ROOT=F:/code/lib/ffmpeg-20141004-git-1c4c78e-win64-shared
-export FFMPEG_ROOT=F:/code/lib/ffmpeg-20150601-git-d8bbb99-win64-shared
+#export FFMPEG_ROOT=F:/code/lib/ffmpeg-20150601-git-d8bbb99-win64-shared
+export FFMPEG_ROOT=F:/code/lib/ffmpeg-20150913-git-d13a2df-win64-shared
 
 export  GLUT_ROOT_PATH="F:/code/lib/freeglut/"
 export FLTK2_DIR="F:/code/lib/fltk-2.0-win64"
