@@ -3,9 +3,14 @@ v2.9.4   - RMB->Pixel->Copy pixel value now respects lut and
 	 - Changing volume or audio track now effects both 
 	   stereo images.
 	 - Bug fixed avi saver to work with images whose
-	   resolution was not a multiple of two.
+	   resolution is not a multiple of two.
 	 - Bug fixed thumbnail creation when image is not
 	   a multiple of two.
+	 - Bug fixed gaps in cache that would appear in timeline
+	   when playing in loop.
+	 - Updated to latest ffmpeg version.
+	 - Changed 'o' overlay shortcut to 'v', to avoid clash
+	   with 'o' in changing timeline out point.
 
 v2.9.3   - Bug fixed saving of OpenExr files when data window was
 	   smaller than display window.  Previously it would crash.
